agregando json para db, modificacion de codigo para consumir desde json

--- a/index.html
+++ b/index.html
@@ -87,109 +87,10 @@
 <section id="productos" class="section-padding">
   <div class="container">
     <h2 class="section-title">Nuestros Packs de Cerveza Artesanal</h2>
-    <div class="row">
-
+    <div class="row" id="productos-list">
+        
       <!-- IPA Dorada -->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card card-custom">
-          <img src="/assets/img/producto-generica.png" class="card-img-top" alt="Pack IPA Dorada">
-          <div class="card-body">
-            <div class="d-flex justify-content-between align-items-start mb-2">
-              <h5 class="card-title">IPA Dorada (Pack x6)</h5>
-              <span class="badge badge-popular">Popular</span>
-            </div>
-            <p class="card-text">Pack de cervezas IPA con carácter, notas cítricas y un amargor equilibrado. Nuestra estrella más refrescante.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <span class="price">$14.990 CLP</span>
-              <button class="btn btn-primary-custom btn-sm">Agregar al Carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <!-- Stout Imperial -->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card card-custom">
-          <img src="/assets/img/producto-generica.png" class="card-img-top" alt="Pack Stout Imperial">
-          <div class="card-body">
-            <div class="d-flex justify-content-between align-items-start mb-2">
-              <h5 class="card-title">Stout Imperial (Pack x6)</h5>
-              <span class="badge badge-nuevo">Nuevo</span>
-            </div>
-            <p class="card-text">Cerveza negra intensa con notas de chocolate y café. Pack ideal para los amantes del sabor profundo.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <span class="price">$17.990 CLP</span>
-              <button class="btn btn-primary-custom btn-sm">Agregar al Carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Wheat Ale -->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card card-custom">
-          <img src="/assets/img/producto-generica.png" class="card-img-top" alt="Pack Wheat Ale">
-          <div class="card-body">
-            <h5 class="card-title">Wheat Ale (Pack x6)</h5>
-            <p class="card-text">Pack de cerveza de trigo suave y refrescante, con un sutil toque cítrico. Perfecta para días cálidos.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <span class="price">$12.990 CLP</span>
-              <button class="btn btn-primary-custom btn-sm">Agregar al Carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Red Ale -->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card card-custom">
-          <img src="/assets/img/producto-generica.png" class="card-img-top" alt="Pack Red Ale">
-          <div class="card-body">
-            <h5 class="card-title">Red Ale (Pack x6)</h5>
-            <p class="card-text">Cerveza rojiza con maltas tostadas y equilibrio entre dulzor y amargor. Ideal para comidas contundentes.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <span class="price">$15.990 CLP</span>
-              <button class="btn btn-primary-custom btn-sm">Agregar al Carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Pale Ale -->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card card-custom">
-          <img src="/assets/img/producto-generica.png" class="card-img-top" alt="Pack Pale Ale">
-          <div class="card-body">
-            <div class="d-flex justify-content-between align-items-start mb-2">
-              <h5 class="card-title">Pale Ale (Pack x6)</h5>
-              <span class="badge badge-popular">Popular</span>
-            </div>
-            <p class="card-text">Pack de Pale Ale con lúpulos aromáticos y final limpio. Una interpretación clásica de la cerveza americana.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <span class="price">$13.990 CLP</span>
-              <button class="btn btn-primary-custom btn-sm">Agregar al Carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Porter Ahumada -->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card card-custom">
-          <img src="/assets/img/producto-generica.png" class="card-img-top" alt="Pack Porter Ahumada">
-          <div class="card-body">
-            <div class="d-flex justify-content-between align-items-start mb-2">
-              <h5 class="card-title">Porter Ahumada (Pack x6)</h5>
-              <span class="badge badge-nuevo">Nuevo</span>
-            </div>
-            <p class="card-text">Pack de cerveza oscura con notas ahumadas intensas. Perfecta para paladares exigentes y platos intensos.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <span class="price">$16.990 CLP</span>
-              <button class="btn btn-primary-custom btn-sm">Agregar al Carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
 
     </div>
   </div>
@@ -363,7 +264,7 @@
 
 
 
-
+    <script src="scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
