agregando carrito, creando funciones para validar carrito y agregar productos

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <a href="/login.html" class="btn btn-primary-custom btn-sm">
             <i class="fas fa-user"></i> Iniciar Sesión   <!--achicar btn mas adelante-->
         </a>
+        <a href="#" class="btn btn-primary-custom btn-sm ms-2" data-bs-toggle="offcanvas" data-bs-target="#carritoOffcanvas">
+        <i class="fa-solid fa-cart-shopping"></i>
+        </a>
         </div>
     </div>
 </nav>
@@ -262,7 +265,23 @@
         </div>
     </footer>
 
-
+    <!-- Offcanvas Carrito de Compras -->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="carritoOffcanvas" aria-labelledby="carritoLabel">
+  <div class="offcanvas-header">
+    <h5 id="carritoLabel">Carrito de Compras</h5>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body" id="carrito-contenido">
+    <p class="text-muted">Tu carrito está vacío.</p>
+  </div>
+  <div class="p-3 border-top">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+    <strong>Total:</strong>
+    <span id="carrito-total" class="text-end fw-bold">$0 CLP</span>
+  </div>
+  <button class="btn btn-primary-custom w-100" onclick="finalizarCompra()">Finalizar Compra</button>
+  </div>
+</div>
 
     <script src="scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
