--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="#inicio">Inicio</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#productos">Productos</a>
+            <a class="nav-link" href="/pages/products.html">Productos</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="#nosotros">Nosotros</a>
@@ -35,8 +35,8 @@
             <a class="nav-link" href="#contacto">Contacto</a>
             </li>
         </ul>
-        <a href="/login.html" class="btn btn-primary-custom btn-sm">
-            <i class="fas fa-user"></i> Iniciar Sesión   <!--achicar btn mas adelante-->
+        <a href="/pages/login.html" class="btn btn-primary-custom btn-sm">
+            <i class="fas fa-user"></i> Iniciar Sesión  
         </a>
         <a href="#" class="btn btn-primary-custom btn-sm ms-2" data-bs-toggle="offcanvas" data-bs-target="#carritoOffcanvas">
         <i class="fa-solid fa-cart-shopping"></i>
@@ -284,6 +284,7 @@
 </div>
 
     <script src="scripts.js"></script>
+    <script src="auth.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
