--- a/index.html
+++ b/index.html
@@ -12,38 +12,41 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="#">
-        <img src="/assets/img/3d6c7081-cf1b-44a5-91ac-60a6cd4c1675.png" alt="Brewstore Logo" height="40" class="me-2" />
-        Brewstore
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto me-3">
-            <li class="nav-item">
-            <a class="nav-link" href="#inicio">Inicio</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="/pages/products.html">Productos</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#nosotros">Nosotros</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#contacto">Contacto</a>
-            </li>
-        </ul>
-        <a href="/pages/login.html" class="btn btn-primary-custom btn-sm">
-            <i class="fas fa-user"></i> Iniciar Sesión  
-        </a>
-        <a href="#" class="btn btn-primary-custom btn-sm ms-2" data-bs-toggle="offcanvas" data-bs-target="#carritoOffcanvas">
-        <i class="fa-solid fa-cart-shopping"></i>
-        </a>
+        <div class="container">
+            <a class="navbar-brand" href="#">
+            <img src="/assets/img/3d6c7081-cf1b-44a5-91ac-60a6cd4c1675.png" alt="Brewstore Logo" height="40" class="me-2" />
+            Brewstore
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto me-3">
+                <li class="nav-item">
+                <a class="nav-link" href="#inicio">Inicio</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/pages/products.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#nosotros">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#contacto">Contacto</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ms-auto me-3" id="navbar-auth">
+                <!-- render btn login -->
+            </ul>
+            <!-- <a href="/pages/login.html" class="btn btn-primary-custom btn-sm">
+                <i class="fas fa-user"></i> Iniciar Sesión  
+            </a> -->
+            <a href="#" class="btn btn-primary-custom btn-sm ms-2" data-bs-toggle="offcanvas" data-bs-target="#carritoOffcanvas">
+            <i class="fa-solid fa-cart-shopping"></i>
+            </a>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
     <!--hero-->
     <section id="inicio" class="hero-section">
@@ -284,7 +287,7 @@
 </div>
 
     <script src="scripts.js"></script>
-    <script src="auth.js"></script>
+    <script src="/assets/scripts/usuarios.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
