--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -34,6 +34,9 @@
                 <a class="nav-link" href="#contacto">Contacto</a>
                 </li>
             </ul>
+            <ul class="navbar-nav ms-auto me-3" id="navbar-auth">
+                <!-- render btn login -->
+            </ul>
             </div>
         </div>
     </nav>
