--- a/pages/register.html
+++ b/pages/register.html
@@ -145,6 +145,11 @@
             return;
         }
 
+        if (password.length < 8) {
+            alert("La contraseña debe tener al menos 8 caracteres.");
+            return;
+        }
+        
         if (!addUsuario(username, email, password)) {
             alert("El usuario o correo ya está registrado.");
             return;
