--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <hr style="border-color: var(--bg-principal);">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p>&copy; 2024 Brewstore. Todos los derechos reservados. | Disfruta con responsabilidad.</p>
+                    <p>&copy; 2025 Brewstore. Todos los derechos reservados. | Disfruta con responsabilidad.</p>
                 </div>
             </div>
         </div>
@@ -270,23 +270,25 @@
 
     <!-- Offcanvas Carrito de Compras -->
     <div class="offcanvas offcanvas-end" tabindex="-1" id="carritoOffcanvas" aria-labelledby="carritoLabel">
-  <div class="offcanvas-header">
-    <h5 id="carritoLabel">Carrito de Compras</h5>
-    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body" id="carrito-contenido">
-    <p class="text-muted">Tu carrito está vacío.</p>
-  </div>
-  <div class="p-3 border-top">
-    <div class="d-flex justify-content-between align-items-center mb-3">
-    <strong>Total:</strong>
-    <span id="carrito-total" class="text-end fw-bold">$0 CLP</span>
-  </div>
-  <button class="btn btn-primary-custom w-100" onclick="finalizarCompra()">Finalizar Compra</button>
-  </div>
-</div>
+        <div class="offcanvas-header">
+            <h5 id="carritoLabel">Carrito de Compras</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+    <div class="offcanvas-body" id="carrito-contenido">
+        <p class="text-muted">Tu carrito está vacío.</p>
+    </div>
+    <div class="p-3 border-top">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+        <strong>Total:</strong>
+        <span id="carrito-total" class="text-end fw-bold">$0 CLP</span>
+    </div>
+    <button class="btn btn-primary-custom w-100" onclick="finalizarCompra()">Finalizar Compra</button>
+    </div>
+    </div>
 
     <script src="scripts.js"></script>
+    <script src="https://kit.fontawesome.com/6ae997818e.js" crossorigin="anonymous"></script>
+
     <script src="/assets/scripts/usuarios.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
