--- a/pages/products.html
+++ b/pages/products.html
@@ -46,7 +46,7 @@
   <div class="container section-padding">
     <h2 class="section-title text-center">Nuestros Productos</h2>
 
-    <!-- Filtros -->
+    <!-- filtros -->
     <div class="row mb-4">
       <div class="col-md-4">
         <select id="categoriaFiltro" class="form-select">
@@ -65,10 +65,10 @@
       </div>
     </div>
 
-    <!-- Grid productos -->
+    <!-- render productos -->
     <div class="row" id="productos-list"></div>
 
-    <!-- Paginador -->
+    <!-- paginador -->
     <nav>
       <ul class="pagination justify-content-center mt-4" id="paginador"></ul>
     </nav>
@@ -134,8 +134,26 @@
     </footer>
 
 
-
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="carritoOffcanvas" aria-labelledby="carritoLabel">
+        <div class="offcanvas-header">
+            <h5 id="carritoLabel">Carrito de Compras</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body" id="carrito-contenido">
+            <p class="text-muted">Tu carrito está vacío.</p>
+        </div>
+        <div class="p-3 border-top">
+            <div class="d-flex justify-content-between align-items-center mb-3">
+            <strong>Total:</strong>
+            <span id="carrito-total" class="text-end fw-bold">$0 CLP</span>
+            </div>
+            <button class="btn btn-primary-custom w-100" onclick="finalizarCompra()">Finalizar Compra</button>
+        </div>
+    </div>
     <script src="../products.js"></script>
+    <script src="../scripts.js"></script>
+    <script src="/assets/scripts/productDetail.js"></script>
+    <script src="https://kit.fontawesome.com/6ae997818e.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
