--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/styles/styles.css">
-    <title>Document</title>
+    <title>Brew Store</title>
 </head>
 <body>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/index.html">
             <img src="/assets/img/3d6c7081-cf1b-44a5-91ac-60a6cd4c1675.png" alt="Brewstore Logo" height="40" class="me-2" />
             Brewstore
             </a>
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto me-3">
                 <li class="nav-item">
-                <a class="nav-link" href="#inicio">Inicio</a>
+                <a class="nav-link" href="/index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/pages/products.html">Productos</a>
@@ -93,11 +93,7 @@
 <section id="productos" class="section-padding">
   <div class="container">
     <h2 class="section-title">Nuestros Packs de Cerveza Artesanal</h2>
-    <div class="row" id="productos-list">
-        
-      <!-- IPA Dorada -->
-
-
+    <div class="row" id="productos-list">  <!-- render de productos -->
     </div>
   </div>
 </section>
