--- a/pages/products.html
+++ b/pages/products.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/styles/styles.css">
-    <title>Document</title>
+    <title>BrewStore | Productos</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
@@ -27,10 +27,10 @@
             <a class="nav-link" href="/pages/products.html">Productos</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#nosotros">Nosotros</a>
+            <a class="nav-link" href="/index.html#nosotros">Nosotros</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#contacto">Contacto</a>
+            <a class="nav-link" href="/index.html#contacto">Contacto</a>
             </li>
         </ul>
         <a href="/pages/login.html" class="btn btn-primary-custom btn-sm">
