--- a/pages/register.html
+++ b/pages/register.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/styles/styles.css">
-    <title>Document</title>
+    <title>BrewStore | Crear Cuenta</title>
 </head>
 <body>
 
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/index.html">
             <img src="/assets/img/3d6c7081-cf1b-44a5-91ac-60a6cd4c1675.png" alt="Brewstore Logo" height="40" class="me-2" />
             Brewstore
             </a>
@@ -28,13 +28,13 @@
                 <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#productos">Productos</a>
+                <a class="nav-link" href="/pages/products.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#nosotros">Nosotros</a>
+                <a class="nav-link" href="/index.html#nosotros">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#contacto">Contacto</a>
+                <a class="nav-link" href="/index.html#contacto">Contacto</a>
                 </li>
             </ul>
             </div>
